...
            "Garage"
        case .habitStack:
            "Habit Stack"
        case .taskProtocol:
            "Task Protocol"
        case .calendar:
            "Calendar"
        case .bibleStudy:
            "Bible Study"
        case .supplyList:
            "Supply List"
        }
    }
...
